# yarm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: dev.yml  release.yml
src/: cli.rs  config.rs  display.rs  gui.rs  main.rs
src/display/: manager.rs  mod.rs  monitor.rs  orientation.rs  resolution.rs
src/ui/: loader.rs  message.rs  mod.rs  model.rs  state.rs  subscription.rs  theme.rs  update.rs  view.rs
src/ui/views/: dialog.rs  mod.rs  monitor.rs  profile.rs
src/ui/widgets/: dialog.rs  mod.rs  orientation_switcher.rs
src/utils/: config.rs
