[package]
name = "yarm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
iced = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_Display",
]